[Java] Add `-XX:+EnableDynamicAgentLoading` on JDK 21+.